# Written by Daniel Robbins (drobbins@gentoo.org)

  28 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add support for generate-modprobe.conf or generating /etc/modprobe.conf
    in the new sys-apps/module-init-tools.  Note that you need version
    0.9.7 or later of sys-apps/module-init-tools.  Updated
    /sbin/modules-update for this.

  26 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add /etc/init.d/crypto-loop and /etc/conf.d/crypto-loop, a cool
    rc-script to setup encrypted loopback devices.  This was kindly
    donated by Matthew Kennedy <mkennedy@gentoo.org> (bug #11471).

  25 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix src/awk/genenviron.awk stripping *all* '=', closing
    bug #8901.

    Fix src/awk/genenviron.awk not seperating CONFIG_PROTECT with
    spaces ...

* rc-scripts 1.4.2.7 (24 Dec 2002)

  24 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add a fix to /sbin/functions.sh for bug #12601.

  22 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add INFOPATH to /etc/env.d/00basic.

    Fix src/awk/genenviron.awk to get the order of the env.d files
    correct.  Also fix it to handle *all* the SPECIALS correctly.
    This closes bug #12411.

* rc-scripts 1.4.2.6 (18 Dec 2002)

  18 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add mips changes to sbin/MAKEDEV.  This should close bug #12329,
    thanks to Nicholas Wourms <nwourms@netscape.net>.

    Quote some tests in /sbin/rc-update to fix/avoid the problem
    in bug #

    Fix awk regex in /etc/init.d/halt.sh to fix bug #11795.

    Update shell for postgres user, closing bug #12258.

  11 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix src/awk/genenviron.awk not to add duplicate entries, closing
    bug #8999.

* rc-scripts 1.4.2.5 (09 Dec 2002)

  08 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add another sync to /etc/init.d/halt.sh, closing bug 8173.

    Add smmsp uid and gid.  Closes bug #8952.
