@@ -14,17 +14,25 @@ start() {
 	mount -at nocoda,nonfs,noproc,noncpfs,nosmbfs,noshm >/dev/null
 	eend $? "Some local filesystem failed to mount"
 
+	# Check what kernel we are running ...
+	if [ "$(get_KV)" -gt "24" ]
+	then
+		USBFS="usbfs"
+	else
+		USBFS="usbdevfs"
+	fi
+
 	# Mount usbdevfs if kernel have support
-	if [ -z "$(egrep 'usbdevfs' /proc/filesystems)" ]
+	if [ -z "$(egrep "${USBFS}" /proc/filesystems)" ]
 	then
 		# >/dev/null to hide errors from non-USB users
 		modprobe usbcore &>/dev/null
 	fi
-	if [ -n "$(egrep 'usbdevfs' /proc/filesystems)" ] && [ -e /proc/bus/usb ] && \
+	if [ -n "$(egrep "${USBFS}" /proc/filesystems)" ] && [ -e /proc/bus/usb ] && \
 	   [ ! -e /proc/bus/usb/devices ]
 	then
 		ebegin "Mounting USB device filesystem"
-		mount -t usbdevfs usbdevfs /proc/bus/usb &>/dev/null
+		mount -t ${USBFS} ${USBFS} /proc/bus/usb &>/dev/null
 		eend $? "Failed to mount USB device filesystem"
 	fi
 
